Fixed overflow

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -3,6 +3,10 @@
     font-family: lato;
 }
 
+body {
+    /* overflow: hidden; */
+}
+
 img {
     width: 100%;
     height: auto;
